[metadata]
name = supGecko
version = 0.1.0a4
author = sup39
author_email = sms@sup39.dev
description = A helper library to write Gecko code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sup39/supGecko
license = MIT
project_urls =
  Bug Tracker = https://github.com/sup39/supGecko/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
